--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -97,25 +97,10 @@
 
 <div class="row"> 
     <div class="col-lg-12">                     @if (roller.Contains("Ogretici"))                   {
-
-                        
-                       <div class="dropdown">
-
-                        
-                                  <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-primary btn-lg shiny">
-                                    <i class="fa fa-plus-circle"></i>
-                                    <span class="caret"></span>
-                                  </button>
-
-                     <ul class="dropdown-menu">
-                              <li><a href="#" data-toggle="modal" data-target="#modalDuyuruYap"><i class="fa fa-book fa-fw"></i> Duyuru Yap</a></li>
-                              <li><a href="#" data-toggle="modal" data-target="#modalDosyaEkle"><i class="fa fa-file fa-fw"></i> Dosya Paylaş</a></li>
-                              <li><a href="#" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-clock-o fa-fw"></i> Ödev Ver</a></li>
-
-                     </ul>
-                    </div>
-
-                              
+                       <button class="btn btn-primary shiny btn-lg" data-toggle="modal" data-target="#modalDosyaEkle" title="Dosya Paylaş" data-toggle="tooltip" data-placement="top"><i class="fa fa-file fa-fw"></i> </button>
+                       <button class="btn btn-info btn-lg shiny" data-toggle="modal" data-target="#modalDuyuruYap"><i class="fa fa-clipboard fa-fw"></i> </button>
+                       <button class="btn btn-warning btn-lg shiny" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-clock-o fa-fw"></i> </button>
+                     
                    }                   <br><br>
     <div class="widget">
                <div class="widget-header bordered-top bordered-blueberry">
@@ -196,7 +181,7 @@
                     <td class="text-right">@item.UI_GorunenTarih</td><td>		
                     @if (item.UI_SilmeDugmesi==1)		
                     {		
-                     <button class="btn btn-danger btnAktiviteSil btn-xs" data-AktiviteID="@item.AktiviteID"><i class="fa fa-remove"></i></button>		
+                     <button class="btn btn-danger shiny btnAktiviteSil btn-xs" data-AktiviteID="@item.AktiviteID"><i class="fa fa-remove"></i></button>		
                     }		
                     </td>		
                 </tr>		
