--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -277,7 +277,7 @@
       <div class="modal-body">
         
             <label>@Resources.Resource.lblDers</label>
-            <select name="DersID" id="dosyaPaylasodevVercmbDersID" class="form-control">
+            <select name="DersID" id="dosyaPaylascmbDersID" class="form-control">
                 <option value=""></option>
                 @foreach(var ders in queryDerslerim)
                   {
