--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -118,8 +118,7 @@
                                                
                                             </div><!--Widget Buttons-->                     
                 </div><!--Widget Header-->
-               <div class="widget-body">      
-                 <table class="table table-hover" id="tabloAktiviteler" >		
+               <div class="widget-body">                   <div class="row">                    <div class="col-sm-12 col-lg-12 col-md-12">                     <table class="table table-hover" id="tabloAktiviteler" >		
        <thead>		
             <tr>		
                 <th></th>		
@@ -187,7 +186,8 @@
                 </tr>		
             }		
          </tbody>		
-    </table>
+    </table>                    </div>                   </div>      
+               
                    <br>
               <button class="btn btn-info"  id="btnOncekiaktiviteler" data-SonAktiviteID="@sonAktiviteID"> @Resources.Resource.lblDahaOncekiAktiviteleriGor</button><br><br>                              
                                         </div><!--Widget Body-->
