--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -159,7 +159,7 @@
                     <td>
                         @if (dosya.YuklenmeTuru==2)
                         {
-                            <label class="label label-orange" title="@Resources.Resource.lblOdevGonderisi" data-toggle="tooltip" data-placement="top"><i class="fa fa-clock-o"></i></label>
+                            <label class="label label-orange" title="@Resources.Resource.lblOdevGonderisi" data-toggle="tooltip" data-placement="top"><i class="fa fa-tasks"></i></label>
                         }
                     
                     </td>
