--- a/Odev/Goster.cshtml
+++ b/Odev/Goster.cshtml
@@ -102,7 +102,7 @@
    <h1>@queryOdev.Baslik</h1>
 }
 
-<i class="fa fa-clock-o hide" id="spnOdevID" data-OdevID="@OdevID"></i>
+<i class="fa fa-tasks hide" id="spnOdevID" data-OdevID="@OdevID"></i>
 <br>
 <div class="row">
      <div class="col-md-12 column">
