--- a/Odev/Liste.cshtml
+++ b/Odev/Liste.cshtml
@@ -89,7 +89,7 @@
             @foreach (var odev in queryOdevler)
             {
                 <tr>
-                    <td><a href="@Href("~/Odev/Goster?OdevID=")@odev.OdevID" title="Gözat"><i class="fa fa-clock-o fa-2x text-success"></i> @odev.Baslik </a></td>
+                    <td><a href="@Href("~/Odev/Goster?OdevID=")@odev.OdevID" title="Gözat"><i class="fa fa-tasks fa-2x text-success"></i> @odev.Baslik </a></td>
                    
                        <td> 
                             <div class="dropdown">
