--- a/Odev/OdevGonderisi.cshtml
+++ b/Odev/OdevGonderisi.cshtml
@@ -54,7 +54,7 @@
    <h1>@Resources.Resource.lblOdevGonderisi</h1>
 }
 
-<i class="fa fa-clock-o hide" id="spnOdevGonderiID" data-OdevGonderiID="@OdevGonderiID"></i><br>
+<i class="fa fa-tasks hide" id="spnOdevGonderiID" data-OdevGonderiID="@OdevGonderiID"></i><br>
 
 <div class="row">
      <div class="col-md-6 column">
