--- a/Shared/_LayoutYeni.cshtml
+++ b/Shared/_LayoutYeni.cshtml
@@ -300,7 +300,7 @@
                      <!--Ödevler-->
                       <li>
                         <a href="@Href("~/Odev/Liste")">
-                            <i class="menu-icon fa fa-clock-o fa-fw"></i>
+                            <i class="menu-icon fa fa-tasks fa-fw"></i>
                             <span class="menu-text"> @Resources.Resource.lblOdevler </span>
                         </a>
                     </li>  
