--- a/Ajax/Odev/OdevVer.cshtml
+++ b/Ajax/Odev/OdevVer.cshtml
@@ -56,7 +56,7 @@
         }
     }
    
-    db.Execute("INSERT INTO Aktivite(UserID,DersID,Renk,Ikon,URL,IlaveMetin,IliskiliOge,EylemID) VALUES(@0,@1,@2,@3,@4,@5,@6,@7)",WebSecurity.CurrentUserId,queryDers.DersID,"info","fa-clock-o",Href("~/Odev/Goster?OdevID=" + yeniOdevID),Baslik,"odvver" + yeniOdevID.ToString(),3);
+    db.Execute("INSERT INTO Aktivite(UserID,DersID,Renk,Ikon,URL,IlaveMetin,IliskiliOge,EylemID) VALUES(@0,@1,@2,@3,@4,@5,@6,@7)",WebSecurity.CurrentUserId,queryDers.DersID,"info","fa-tasks",Href("~/Odev/Goster?OdevID=" + yeniOdevID),Baslik,"odvver" + yeniOdevID.ToString(),3);
    
    //herbir öğrenci için bildirim ekle
 
