--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -99,7 +99,7 @@
     <div class="col-lg-12">                     @if (roller.Contains("Ogretici"))                   {
                        <button class="btn btn-primary shiny btn-lg" data-toggle="modal" data-target="#modalDosyaEkle" title="Dosya Paylaş" data-toggle="tooltip" data-placement="top"><i class="fa fa-file fa-fw"></i> </button>
                        <button class="btn btn-info btn-lg shiny" data-toggle="modal" data-target="#modalDuyuruYap"><i class="fa fa-clipboard fa-fw"></i> </button>
-                       <button class="btn btn-warning btn-lg shiny" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-clock-o fa-fw"></i> </button>
+                       <button class="btn btn-warning btn-lg shiny" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-tasks fa-fw"></i> </button>
                      
                    }                   <br><br>
     <div class="widget">
